# totem-tool

./: .gitignore  ADDING_DJANGO_API_GUIDE.md  ADDING_VIEW_GUIDE.md  BUILD_GUIDE.md  DEVELOPMENT.md  GIT_GUIDE.md  LICENSE  NEW_BUILD_COMMANDS.md  QUICK_START.md  README.md  RUN_PROJECT.md  SETUP.md  package-lock.json  package.json  start-dev.bat  test-setup.bat  totem_backend.spec
totem_lib/: .gitignore  README.md  example.py  example_duckdb.py  example_ocpn.py  example_results.md  example_totem_conformance.py  ocel.py  pyproject.toml  requirements.txt  requirements_github_actions.txt  totem.py
totem_lib/evaluation/: db_import_performance.py  import_performance.py  ocdfg_performance.py  totem_performance.py  variants_performance.py
totem_lib/example_data/: toy_example_ocel2.csv
totem_lib/examples/: OCCN.md  example_edit_distance.py  example_variants.py  variants_from_process_areas.py
totem_lib/src/totem_lib/: __init__.py  ocdfg.py  ocel.py  ocpn.py  ocvariants.py  pm4py_adapter.py  totem.py  utils.py
totem_lib/test_data/small/: container_logistics.duckdb  ocel2-p2p.duckdb  order-management.duckdb
totem_lib/tests/: test_cc_variants.py  test_init.py  test_occn.py  test_ocpn.py  test_pm4py_roundtrip.py  test_totem.py
totem_lib/tests/assets/: example_occns.py  example_ocpns.py  ocel_helpers.py
totem_lib/tests/dfg/: test_ocdfg_correctness.py
totem_lib/tests/occn/: test_discovery.py  test_occn.py  test_playout.py  test_semantics.py
totem_lib/tests/ocel/: test_converter.py  test_csv_importer.py  test_filter.py
totem_lib/tests/ocpn/: test_ocpn.py  test_semantics.py
totem_lib/tests/simulation/: test_resource_constraints.py  (+2 more)
(+255 files in other folders)
